--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo3.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="\Blue Modern Planet Chat Logo Design.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Saturn</title>
   </head>
   <body>
     <div id="root"></div>
